--- a/Dashboard.html
+++ b/Dashboard.html
@@ -254,7 +254,7 @@
                 modal.style.display = "none";
                 location.reload();
             }).catch(function (error) {
-                alert('Error al actualizar el usuario: ' + error);
+                alert('Error al actualizar los datos del usuario: ' + error);
             });
         }
 
