--- a/Clientes.html
+++ b/Clientes.html
@@ -337,7 +337,7 @@
                 <label for="celular">Celular:</label>
                 <input type="text" id="celular"><br>
 
-                <label for="reserva_id">Numero de la reserva:</label>
+                <label for="reserva_id">N° de reserva:</label>
                 <input type="text" id="reserva_id" disabled><br>
 
                 <button type="submit" class="btn btn-primary">Guardar Cambios</button>
