--- a/Dashboard.html
+++ b/Dashboard.html
@@ -263,44 +263,39 @@
             });
         };
 
-        function guardarUsuario() {
-            const cedula = document.getElementById("cedula").value.trim();
-            const nombres = document.getElementById("nombres").value.trim();
-            const correo = document.getElementById("correo").value.trim();
-            const contraseña = document.getElementById("contraseña").value.trim();
-            const celular = document.getElementById("celular").value.trim();
+        function agregarUsuario() {
+            const cedula = document.getElementById("newcedula").value;
+            const nombres = document.getElementById("newnombres").value;
+            const correo = document.getElementById("newcorreo").value;
+            const contraseña = document.getElementById("newcontraseña").value;
+            const celular = document.getElementById("newcelular").value;
 
             if (!cedula || !nombres || !correo || !contraseña || !celular) {
                 alert("Todos los campos son obligatorios.");
                 return;
             }
-            const data = {
-                cedula: cedula,
-                nombres: nombres,
-                correo: correo,
-                contraseña: contraseña,
-                celular: celular
-            };
-            console.log("Datos enviados:", JSON.stringify(data));
 
-            crearusuario(data);
-        }
+            axios
+                .post("http://127.0.0.1:8000/users/create_users",{
+                    cedula: cedula,
+                    nombre: nombres,
+                    correo: correo,
+                    contraseña: contraseña,
+                    celular: celular
+                })
+                .then(function (response) {
+                    alert("Usuario agregado correctamente");
+                    windows.onload;
+                    const modalElement = document.getElementById('addUserModal');
+                    const modalInstance = bootstrap.Modal.getInstance(modalElement);
+                    modalInstance.hide();
 
-        function crearusuario(data) {
-            axios({
-                method: 'POST',
-                url: 'http://127.0.0.1:8000/users/create_users',
-                data: data,
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            }).then(function (response) {
-                if (error.response && error.response.data && error.response.data.detail) {
-                    alert('Error al crear el usuario: ' + JSON.stringify(error.response.data.detail));
-                } else {
-                    alert('Error desconocido');
-                }
-            });
+                    resetAddUserForm();
+                })
+                .catch(function (error) {
+                    console.error("Error al agregar el usuario:", error);
+                });
+            })
         }
     </script>
 
@@ -333,42 +328,45 @@
             </form>
         </div>
     </div>
-    </div>
 
 
     <!-- Modal para crear nuevo Usuario -->
-    <div class="modal" id="modalUsuario" tabindex="-1" aria-labelledby="modalUsuarioLabel" aria-hidden="true">
+    <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="addUserModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalUsuarioLabel">Formulario de registro de Usuarios</h5>
+                    <h5 class="modal-title" id="addUserModalLabel">Formulario de registro de Usuarios</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="createuser">
-                         <div class="form-group">
-                            <label for="cedula">Cedula</label>
-                            <input type="text" class="form-control" id="cedula" placeholder="cedula">
+                    <form id="addUserForm">
+                         <div class="mb-3">
+                            <label for="newcedula" class="form-label">Cedula</label>
+                            <input type="text" class="form-control" id="newcedula" placeholder="cedula" />
                         </div>
-                        <div class="form-group">
-                            <label for="nombres">Nombres</label>
-                            <input type="text" class="form-control" id="nombres" placeholder="Nombres">
+                        <div class="mb-3">
+                            <label for="newnombres" class="form-label">Nombres</label>
+                            <input type="text" class="form-control" id="newnombres" placeholder="Nombres" />
                         </div>
-                        <div class="form-group">
-                            <label for="correo">Correo</label>
-                            <input type="email" class="form-control" id="correo"
-                                aria-describedby="emailHelp" placeholder="Introduzca Correo">
+                        <div class="mb-3">
+                            <label for="newcorreo" class="form-label">Correo</label>
+                            <input type="email" class="form-control" id="newcorreo"
+                                aria-describedby="emailHelp" placeholder="Introduzca Correo" />
                             <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tu correo electrónico con nadie.</small>
                         </div>
-                        <div class="form-group">
-                            <label for="contraseña">Contraseña</label>
-                            <input type="password" class="form-control" id="contraseña"
-                                placeholder="Contraseña">
+                        <div class="mb-3">
+                            <label for="newcontraseña" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="newcontraseña"
+                                placeholder="Contraseña" />
+                            <span class="input-group-text">
+                                    <i class="fas fa-eye" id="toggleAddPassword" style="cursor: pointer;"></i>
+                            </span>
                         </div>
-                        <div class="form-group">
-                            <label for="celular">Celular</label>
-                            <input type="text" class="form-control" id="celular" placeholder="Celular">
+                        <div class="mb-3">
+                            <label for="newcelular" class="form-label">Celular</label>
+                            <input type="text" class="form-control" id="newcelular" placeholder="Celular" />
                         </div>
-                        <button type="submit" class="btn btn-primary" onclick="guardarUsuario()">Guardar</button>
+                        <button type="button" class="btn btn-primary" onclick="agregarUsuario()">Guardar</button>
                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
                     </form>
                 </div>
