--- a/Dashboard.html
+++ b/Dashboard.html
@@ -307,7 +307,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="addUserModalLabel">Nuevo usuario</h5>
+                    <h5 class="modal-title" id="addUserModalLabel">Formulario de registro de usuarios</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
