--- a/Dashboard.html
+++ b/Dashboard.html
@@ -128,7 +128,7 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-5">
             <h1 class="h2">Panel Principal de Usuarios!</h1>
 
-            <h2 class="mt-4 d-flex align-items-center">Usuarios
+            <h2 class="mt-4 d-flex align-items-center">
                 <button class="btn btn-primary btn-sm ml-3" data-bs-toggle="modal" data-bs-target="#addUserModal">Nuevo
                     Usuario</button>
             </h2>
@@ -329,7 +329,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick="agregarUsuario()">Agregar Usuario</button>
+                    <button type="button" class="btn btn-primary" onclick="agregarUsuario()">Agregar nuevo usuario</button>
                 </div>
             </div>
         </div>
